tests/baselines/reference/moduleWithNoValuesAsType.errors.txt
==== tests/cases/compiler/moduleWithNoValuesAsType.ts (3 errors) ====
    module A { }
    var a: A; // error
           ~
!!! error TS4022: Type reference cannot refer to container 'A'.
    
    module B {
        interface I {}
    }
    var b: B; // error
           ~
!!! error TS4022: Type reference cannot refer to container 'B'.
    
    module C {
        module M {
            interface I {}
        }
    }
    
    var c: C; // error
           ~
!!! error TS4022: Type reference cannot refer to container 'C'.